--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["WebDev22"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "~3.10"
 python-telegram-bot = "^13.15"
 
 [tool.poetry.group.dev.dependencies]
