--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "~3.10"
 python-telegram-bot = "^13.15"
+extcolors = "^1.0.0"
+rembg = "^2.0.30"
 
 [tool.poetry.group.dev.dependencies]
 
