--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "~3.10"
 python-telegram-bot = "^13.15"
 extcolors = "^1.0.0"
 rembg = "^2.0.30"
+requests = "^2.28.2"
 
 [tool.poetry.group.dev.dependencies]
 
