--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python-telegram-bot = "^13.15"
 extcolors = "^1.0.0"
 rembg = "^2.0.30"
 requests = "^2.28.2"
+webcolors = "^1.12"
 
 [tool.poetry.group.dev.dependencies]
 
