--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ extcolors = "^1.0.0"
 rembg = "^2.0.30"
 requests = "^2.28.2"
 webcolors = "^1.12"
+openai = "^0.26.5"
 
 [tool.poetry.group.dev.dependencies]
 
